Media queries updated for responsiveness

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <div id="per_million_chart" style="border-radius: 8px;"></div>
             </div>
-            <div class="col-6 text_wrapper">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 text_wrapper">
                 <h5 class="mb-5" style="text-align: center;">Latest Statistics for India</h5>
                 <div class="row mb-4">
                     <div class="col-6">
@@ -110,9 +110,9 @@
         </div>
         <footer class="footer mt-4 py-3">
             <div class="container">
-                <span class="text-muted">COVID-19 Tracker v1.0 information provided by <a
+                <span class="text-muted">COVID-19 Tracker(1.0) information provided by <a
                         href="https://rapidapi.com/astsiatsko/api/coronavirus-monitor">RapidAPI</a></span>
-                <span style="float: right;"><a href="https://github.com/vm399/vm399.github.io">Github Repo</a></span>
+                <span style="float: right;"><a href="#">Github Repo</a></span>
             </div>
         </footer>
         <script src='main.js'></script>
