--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <footer class="footer mt-4 py-3">
             <div class="container">
-                <span class="text-muted">COVID-19 Tracker(1.0) information provided by <a
+                <span class="text-muted">COVID-19 Tracker v1.0 information provided by <a
                         href="https://rapidapi.com/astsiatsko/api/coronavirus-monitor">RapidAPI</a></span>
                 <span style="float: right;"><a href="#">Github Repo</a></span>
             </div>
