--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="container">
                 <span class="text-muted">COVID-19 Tracker v1.0 information provided by <a
                         href="https://rapidapi.com/astsiatsko/api/coronavirus-monitor">RapidAPI</a></span>
-                <span style="float: right;"><a href="#">Github Repo</a></span>
+                <span style="float: right;"><a href="https://github.com/vm399/vm399.github.io">Github Repo</a></span>
             </div>
         </footer>
         <script src='main.js'></script>
